Add PeriodicWaveConstraints dictionary

When support for disabling normalization for createPeriodicWave was
added, the corresponding PeriodicWaveConstraints dictionary was not.
Add it now.

No change in behavior.

WebAudio spec: http://webaudio.github.io/web-audio-api/#periodicwaveconstraints

BUG=608934
TEST=none

Review-Url: https://codereview.chromium.org/1948653003
Cr-Commit-Position: refs/heads/master@{#391924}

Former-commit-id: eb671f128cb93ca42e255761b7b0b7bb0b7c0055